# uintr-ipc-bench

./: README.md
other/: ideas.md
source/: CMakeLists.txt
source/domain/: client.c  server.c
source/eventfd/: eventfd-bi.c  eventfd-uni.c
source/mmap/: client.c  server.c
source/other/: semaphore-client.c
source/tcp/: server.c
source/tcp/other/: server.c
source/uintrfd/: CMakeLists.txt  uintrfd-bi-wait.c  uintrfd-bi.c  uintrfd-uni.c
