###########################################################
## TARGETS
###########################################################

add_executable(uintrfd-uni uintrfd-uni.c)

###########################################################
## COMMON
###########################################################

target_link_libraries(uintrfd-uni ipc-bench-common)
